tests/expectations/compiler/constructor/config_but_no_constructor_fail.out
Error [ESAZ0374011]: An upgrade configuration was provided, but no constructor was found.
    --> compiler-test:5:9
     |
   5 | program test.aleo {
     |         ^^^^
